kubernetes/authmicroservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authmicroservice
  name: authmicroservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authmicroservice
  template:
    metadata:
      labels:
        app: authmicroservice
    spec:
      containers:
        - name: authmicroservice
          image: docker.pkg.github.com/dukekan/authmicroservice/authmicroservice:1.2
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: authmicroservice-secret # used to pull images from github
