kubernetes/authmicroservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authmicroservice
  name: authmicroservice
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: authmicroservice
  type: LoadBalancer
